Colaboratory를 통해 생성됨

--- a/04_00_분류.ipynb
+++ b/04_00_분류.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOMScZlSXoNc/i4ivjekD4T",
+      "authorship_tag": "ABX9TyPmNIFOwVPiP5Z94uB1lCWp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,9 +170,9 @@
         "        * 'None': 디폴트, 전체 피쳐 선정\n",
         "        * int: 대상 피처의 개수\n",
         "        * float: 전체 피처 중 대상 피처의 퍼센트\n",
-        "        * 'sqrt': $\\sqrt{\\text{전체 피쳐 개수}}$\n",
+        "        * 'sqrt': $\\sqrt{전체 피쳐 개수}$\n",
         "        * 'auto': sqrt와 동일\n",
-        "        * 'log': $ \\log_{2} {\\text{전체 피처 개수}} $\n",
+        "        * 'log': $ \\log_{2} {전체 피처 개수} $\n",
         "\n",
         "    * ***max_depth***\n",
         "        * **트리의 최대 깊이를 규정**\n",
@@ -2164,31 +2164,30 @@
         "여러 개의 분류기(Classifier)를 생성하고 그 예측을 결합함으로써 보다 정확한 최종 예측을 도출하는 기법  \n",
         "* **목표**: 다양한 분류기의 예측 결과를 결합함으로써 단일 분류기보다 신뢰성이 높은 예측값을 얻는 것\n",
         "---\n",
-        "* <font color=green>**보팅(Voting)**\n",
+        "* **보팅(Voting)**\n",
         "    * 여러 개의 분류기가 투표를 통해 최종 예측 결과를 결정하는 방식\n",
         "    * **서로 다른 알고리즘을 가진 분류기를 결합**\n",
         "    * ex) Linear Regression, K-NN, SVM 등의 ML 알고리즘을 통해 학습하고 예측한 결과를 가지고 Voting을 통해 최종 예측\n",
         "\n",
         "\n",
-        "* <font color=green>**배깅(Bagging. Bootstrap Aggregating)**\n",
+        "* **배깅(Bagging. Bootstrap Aggregating)**\n",
         "    * 여러 개의 분류기가 투표를 통해 최종 예측 결과를 결정하는 방식\n",
         "    * 분류기가 모두 같은 유형의 알고리즘 기반, **데이터 샘플링을 다르게 가져가면서 학습을 수행**\n",
         "    * 하나의 ML 알고리즘, 여러 데이터 세트를 가지고 분류기들이 학습\n",
         "    * *랜덤 포레스트(Random Forest)* 가 대표적인 배깅 모델\n",
         "    * 교차 검증이 데이터 세트 간의 중복을 허용하지 않는 것과 다르게 배깅은 데이터 세트 간의 중복을 허용\n",
         "\n",
-        "<font color=white>\n",
         "\n",
         "| **Bagging(Bootstrap Aggregating)** |           **Random Forest**            |\n",
         "|:----------------------------------:|:--------------------------------------:|\n",
         "| 중복을 허용한 랜덤 샘플링 기법     |         부트스트랩 샘플 사용           |\n",
-        " Bootstrap 자료를 모델링하고 결합해서 최종 모델 산출    |  Decision Tree를 Random 하게 만들고 이 때 *설명 변수를 제한* |\n",
-        " |  Train Set에서 데이터 랜덤 추출 (모든 변수를 사용)        |  Tree마다 독립 변수가 다르게 들어가도록 독립 변수의 수를 제한          |\n",
+        "| Bootstrap 자료를 모델링하고 결합해서 최종 모델 산출    |  Decision Tree를 Random 하게 만들고 이 때 *설명 변수를 제한* |\n",
+        "|  Train Set에서 데이터 랜덤 추출 (모든 변수를 사용)  |  Tree마다 독립 변수가 다르게 들어가도록 독립 변수의 수를 제한          |\n",
         "\n",
         "<center>데이터 셋에서 일부를 랜덤 추출하여 학습에 사용하지만 random subset에 있는 변수의 수가 다르다.</center>\n",
         "\n",
         "\n",
-        "* <font color=green>**부스팅(Boosting)**\n",
+        "* **부스팅(Boosting)**\n",
         "    * 여러 개의 분류기가 순차적으로 학습을 수행하되, 앞에서 학습한 분류기가 예측이 틀린 데이터에 대해서는 올바르게 예측할 수 있도록 **다음 분류기에게는 가중치(weight)를 부여**하면서 학습과 예측을 진행\n",
         "\n",
         "    * **Gradient Boosting**\n",
@@ -2237,7 +2236,7 @@
         "        * 데이터가 대부분 수치형이거나 Sparse Matrix는 잘 처리하지 못한다.\n",
         "\n",
         "\n",
-        "* <font color=green> **스태킹(Stacking)**\n",
+        "* **스태킹(Stacking)**\n",
         "    * 여러 가지 다른 모델의 예측 결과값을 다시 학습 데이터로 만들어서 다른 모델(메타 모델)로 재학습시켜 결과를 예측하는 방법\n",
         "    * 캐글 같은 대회에서 많이 사용\n",
         "    * 기본적인 Stacking Ensemble 방법은 Overfitting 문제가 있어서 잘 사용하지 않는다.  \n",
@@ -2660,7 +2659,7 @@
         "* *max_features*\n",
         "    * 결정 트리에 사용된 *max_features*와 같다.\n",
         "    * default='auto' ('sqrt'와 같다)\n",
-        "    * 트리를 분할하는 피처를 참조할 때 전체 피쳐가 아니라 $\\sqrt{\\text{전체 피쳐 개수}}$만큼 참조한다.\n",
+        "    * 트리를 분할하는 피처를 참조할 때 전체 피쳐가 아니라 $\\sqrt{전체 피쳐 개수}$만큼 참조한다.\n",
         "    * *max_depth*나 *min_samples_leaf*와 같이 결정 트리에서 과적합을 개선하기 위해 사용되는 파라미터가 랜덤 포레스트에도 똑같이 적용될 수 있다."
       ]
     },
