Colaboratory를 통해 생성됨

--- a/04_00_분류.ipynb
+++ b/04_00_분류.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPwz0NqbHXbxNZzncoL47/o",
+      "authorship_tag": "ABX9TyMmKLEjyg0RTnyDDidA3TVb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2814,7 +2814,7 @@
         "* **GBM**(Gradient Boosting Machine)\n",
         "    * 가중치 업데이트를 **경사 하강법(Gradient Descent)**를 이용\n",
         "    * 오류 값 = 실제 값 - 예측 값\n",
-        "    * $h(x) = y - F(x)$  ($y: 실제 결과값, \\quad x_1, x_2, \\cdots, x_n: 피처, \\quad F(x): 해당 피처에 기반한 예측 함수, \\quad h(x): 오류식$)\n",
+        "    * $h(x) = y - F(x)$  ($y$: 실제 결과값, $x_1, x_2, \\cdots, x_n$: 피처, $F(x)$: 해당 피처에 기반한 예측 함수, $h(x)$: 오류식)\n",
         "    * **경사 하강법(Gradient Descent)**\n",
         "        * 오류식 $h(x)$를 최소화하는 방향성을 가지고 반복적으로 가중치 값을 업데이트"
       ]
