Colaboratory를 통해 생성됨

--- a/09_00_추천_시스템.ipynb
+++ b/09_00_추천_시스템.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9BdAm/TEEwPGOL2Rlms5D",
+      "authorship_tag": "ABX9TyNhZpZR8B4/tmghfBvjYqkf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,8 @@
         "    * 사용자가 어떤 상품을 구매했는가?\n",
         "    * 사용자가 어떤 상품을 둘러보고, 장바구니에 추가했는가?\n",
         "    * 사용자의 평점은?\n",
+        "    * 사용자가 스스로 작성한 자신의 취향은?\n",
+        "    * 사용자가 무엇을 클릭했는가?\n",
         "    "
       ]
     },
@@ -88,7 +90,15 @@
         "## 02. 콘텐츠 기반 필터링 추천 시스템 (Content based filtering)\n",
         "\n",
         "* **사용자가 특정 아이템 사용을 매우 선호하는 경우, 해당 아이템과 비슷한 콘텐츠를 가진 아이템을 추천하는 방식**  \n",
-        "ex) 특정 영화에 높은 평점을 줬을 경우, 해당 장르, 감독, 배우, 키워드 등이 비슷한 영화를 추천"
+        "ex) 특정 영화에 높은 평점을 줬을 경우, 해당 장르, 감독, 배우, 키워드 등이 비슷한 영화를 추천\n",
+        "\n",
+        "---\n",
+        "\n",
+        "ex) \"깐 양파\"를 주문한 고객\n",
+        "* '깐' 이라는 주속성과\n",
+        "* '양파' 라는 상품으로 추천이 가능할텐데  \n",
+        "\"깐 양파\"를 사용한다면 다른 양파를 굳이 주문할 필요가 없을 거라는 예상 (데이터 확인 필요) 과 \"깐 당근\" 등 같은 속성을 가진 같은 중분류 내의 다른 상품을 주문하지 않을까? 라는게 가설  \n",
+        "또한 *사용자가 특정 아이템 사용을 매우 선호* 라는 가정. 이를 적용할만한 sid가 현재 존재하는가?"
       ]
     },
     {
@@ -109,14 +119,15 @@
         "* **협업 필터링(Collaborative Filtering)**:   \n",
         " **사용자 행동 양식(User Behavior)**(사용자가 아이템에 매긴 평점, 상품 구매 이력 등)을 기반으로 추천을 수행하는 방식\n",
         "\n",
-        "* 주요 목표: 사용자-아이템 평점 매트릭스와 같은 축적된 사용자 행동 데이터를 기반으로 사용자가 아직 평가하지 않은 아이템을 예측 평가(Predicted Rating)하는 것\n",
+        "* 주요 목표: 사용자-아이템 평점 매트릭스와 같은 *축적된 사용자 행동 데이터를 기반*으로 사용자가 아직 평가하지 않은 아이템을 예측 평가(Predicted Rating)하는 것  \n",
+        "같은 업종의 신규 고객에 대한 상품 추천 (업종 파악 알고리즘 필요. 업종별, 판매 메뉴별 사용 상품군 파악)\n",
         "\n",
         "* 협업 필터링(Collaborative Filtering) 방식은 **최근접 이웃 방식**과 **잠재 요인 방식**으로 나뉜다. 두 방식 모두 사용자-아이템 평점 행렬 데이터에만 의지해 추천을 수행\n",
         "\n",
         "* **사용자-아이템 평점 행렬**\n",
         "    * 행(Row): 개별 사용자\n",
         "    * 열(Column): 개별 아이템\n",
-        "    * 값(Value): 평점\n",
+        "    * 값(Value): 평점 (구매 횟수, 구매액(량), 구매 빈도, ... 가 될 수 있지 않을까?)\n",
         "    * 많은 아이템을 열로 가지는 다차원 행렬이며, 사용자가 평점을 내는 경우가 많지 않기 때문에 **희소 행렬(Sparse Matrix)** 특성을 가지고 있다.\n",
         "\n",
         "---\n",
@@ -126,6 +137,7 @@
         "        * 당신과 비슷한 고객들이 다음 상품도 구매 (Customers like you also bought these items.)\n",
         "        * 특정 사용자와 유사한 다른 사용자를 TOP-N으로 선정해 이 TOP-N 사용자가 좋아하는 아이템을 추천하는 방식\n",
         "        * 특정 사용자와 타 사용자 간의 유사도(Similarity)를 측정한 뒤 가장 유사도가 높은 TOP-N 사용자를 추출해 그들이 선호하는 아이템을 추천\n",
+        "        * `비슷한 고객이 곧 업종이 될텐데 업종 파악 및 고객의 구매 정보를 데이터로 사용할만큼 충분히 가지고 있는가?`\n",
         "\n",
         "    * **아이템 기반(Item-Item) 협업 필터링**\n",
         "        * 이 상품을 선택한 다른 고객들은 다음 상품도 구매 (Customers who bought this item also bought these items.)\n",
@@ -150,11 +162,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "fQmiHszAxb1w",
-        "outputId": "fb7e2a4a-ac31-465e-8d1d-fc1e3c49bde4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 414
-        }
+        },
+        "outputId": "fb7e2a4a-ac31-465e-8d1d-fc1e3c49bde4"
       },
       "source": [
         "# 레코드 레벨 형태(row-level 형태)의 데이터는 사용자-아이템 평점 행렬로 바꿔줘야함\n",
@@ -174,7 +186,7 @@
         "data = pd.pivot_table(data=data, values='Rating', index='User ID', columns='Item ID')\n",
         "display(data)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,11 +351,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Kt6O2ysZeiIc",
-        "outputId": "c259fe86-a4a1-485d-9482-47ad0dd9e5ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        }
+        },
+        "outputId": "c259fe86-a4a1-485d-9482-47ad0dd9e5ea"
       },
       "source": [
         "# 사용자 기반 최근접 협업 필터링 방식에서 사용하는 데이터 형태\n",
@@ -354,7 +366,7 @@
         "user_based_data = pd.pivot_table(data=data, values='Value', index='User', columns='Movie')\n",
         "user_based_data"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,11 +462,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "IIuzev1YrTM_",
-        "outputId": "4d330c85-da61-473d-8c2c-ae42a15ac017",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        }
+        },
+        "outputId": "4d330c85-da61-473d-8c2c-ae42a15ac017"
       },
       "source": [
         "# 아이템 기반 최근접 협업 필터링 방식에서 사용하는 데이터 형태\n",
@@ -465,7 +477,7 @@
         "item_based_data = pd.pivot_table(data=data, values='Value', index='Movie', columns='User')\n",
         "item_based_data"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,11 +573,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "K_ryBz5jsbiu",
-        "outputId": "cfe1e83b-917d-4b16-f260-584ecab97464",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "outputId": "cfe1e83b-917d-4b16-f260-584ecab97464"
       },
       "source": [
         "# 코사인 유사도 계산\n",
@@ -585,7 +597,7 @@
         "print(f'darkknight with starwarz: {cos_similarity(darkknight, starwarz):.4f}')\n",
         "print(f'darkknight with prometheus: {cos_similarity(darkknight, prometheus):.4f}')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,11 +643,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "EaFTZhgFal2j",
-        "outputId": "69b9456b-beac-43f0-ad81-4445d22df196",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 723
-        }
+        },
+        "outputId": "69b9456b-beac-43f0-ad81-4445d22df196"
       },
       "source": [
         "# 행렬 분해를 통한 잠재 요인 협업 필터링\n",
@@ -683,7 +695,7 @@
         "print(' 사용자-잠재 요인 행렬(Q)과 잠재 요인-아이템 행렬(Q.T) 내적 곱을 통한 결과 예측')\n",
         "display(predict_matrix)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1062,7 @@
         "P = np.random.normal(scale=1./K, size=(num_users, K))\n",
         "Q = np.random.normal(scale=1./K, size=(num_items, K))"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1076,18 +1088,18 @@
         "\n",
         "    return rmse"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "GTugWBkvM_G8",
-        "outputId": "741a0e6d-b167-4e4a-eadf-32c62052f743",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        }
+        },
+        "outputId": "741a0e6d-b167-4e4a-eadf-32c62052f743"
       },
       "source": [
         "# R > 0인 행 위치, 열 위치, 값을 non_zeros 리스트에 저장\n",
@@ -1110,7 +1122,7 @@
         "    if (step % 100) == 0: # 100회 반복시마다 출력\n",
         "        print(f'### iteration step: {step}, rmse: {rmse:.4f}')"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1134,17 +1146,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "6GzVLFgyO5vG",
-        "outputId": "62a1d2fa-855d-4f1d-dd6b-75463bf12c3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        }
+        },
+        "outputId": "62a1d2fa-855d-4f1d-dd6b-75463bf12c3b"
       },
       "source": [
         "pred_matrix = np.dot(P, Q.T)\n",
         "print('예측 행렬:\\n', np.round(pred_matrix, 3))"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
