Colaboratory를 통해 생성됨

--- a/09_00_추천_시스템.ipynb
+++ b/09_00_추천_시스템.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhZpZR8B4/tmghfBvjYqkf",
+      "authorship_tag": "ABX9TyMUGOI0mhcD8ttSpwXxsFKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,19 +134,45 @@
         "\n",
         "* 최근접 이웃 협업 필터링은 메모리(Memory) 협업 필터링이라고도 하며 다음과 같이 나눌 수 있다.\n",
         "    * **사용자 기반(User-User) 협업 필터링**  \n",
+        "        * `유사한 sid들끼리 사용한 pid를 추천`\n",
         "        * 당신과 비슷한 고객들이 다음 상품도 구매 (Customers like you also bought these items.)\n",
         "        * 특정 사용자와 유사한 다른 사용자를 TOP-N으로 선정해 이 TOP-N 사용자가 좋아하는 아이템을 추천하는 방식\n",
         "        * 특정 사용자와 타 사용자 간의 유사도(Similarity)를 측정한 뒤 가장 유사도가 높은 TOP-N 사용자를 추출해 그들이 선호하는 아이템을 추천\n",
         "        * `비슷한 고객이 곧 업종이 될텐데 업종 파악 및 고객의 구매 정보를 데이터로 사용할만큼 충분히 가지고 있는가?`\n",
         "\n",
+        "        - advantages\n",
+        "            - Performance of user-based recommenders keeps improving (albeit very slightly) as neighbourhood sizes are increased.\n",
+        "            - LSA( Latent Semantic Analyses) has a beneficial effect on user-based recommendations\n",
+        "            - **Greater diversity** in the recommendation process\n",
+        "            - Context indenpendent\n",
+        "            - Easy to implement\n",
+        "        - disadvantages\n",
+        "            - **Sparsity**: The percentage of people who rate items is really low.\n",
+        "            - **Cold-start**: New users will have no to little information about them to be compared with other users.\n",
+        "            - **Scalability**: The more users there are in the system, the greater the cost of finding the nearest K neighbours will be.\n",
+        "            - **Higher space requirements**: In order to be able to use the approach for varying values of K, one might end up having to store all pairs of nonzero similarities between pairs of users (or items).Because the number of users is typically greater than the number of items, the space requirements of user-based methods are generally greater than those of item-based methods.\n",
+        "            - The computation of user neighborhoods needs to be performed more frequently with the addition of new users. In this context, incremental maintenance of the recommendation model is more challenging in the case of user-based methods.\n",
+        "\n",
         "    * **아이템 기반(Item-Item) 협업 필터링**\n",
+        "        * `어떤 pid를 주문한 sid들의 정보를 가지고 추천`\n",
         "        * 이 상품을 선택한 다른 고객들은 다음 상품도 구매 (Customers who bought this item also bought these items.)\n",
         "        * (아이템이 가지는 속성과는 상관없이) 사용자들이 그 아이템을 좋아하는지/싫어하는지의 평가 척도가 유사한 아이템을 추천하는 기준이 되는 알고리즘\n",
+        "            * `평가 척도라는 지표를 어떻게 선정할 것인가 (각 pid에 따른 리뷰로 받는 것은 현실적으로 어렵다고 생각됨. 구매액/구매량 등으로 선정한다?)`\n",
         "        * 사용자 기반 최근접 이웃 데이터 세트와 행과 열이 서로 반대 (행이 개별 아이템, 열이 개별 사용자)\n",
         "\n",
         "    * 일반적으로 사용자 기반 협업 필터링보다 **아이템 기반 협업 필터링**이 정확도가 더 높다.  \n",
         "     비슷한 영화를 좋아한다고 해서 취향이 비슷한 것은 아니고 유명한 영화의 경우 대부분의 사람이 관람을 하기 때문이다. 또한, 사용자들이 평점을 매기지 않은 아이템이 많아 다른 사람들과의 유사도를 비교하기 어렵다.\n",
-        "\n",
+        "        - advantages\n",
+        "            - Since the ratings are predicted using the ratings of user herself, the predicted ratings tend to be much more consistent with the other ratingsof this user.\n",
+        "            - Item based similarity is a common choice for high load services.\n",
+        "            - The reason is that usually item’s neighbourhood changes much slower in compared to user’s neighbourhood.\n",
+        "            - Much easier to explain the recommendation to the users.\n",
+        "            - Item-based recommenders perform considerably better than the user-based ones.\n",
+        "            - The greater prediction accuracy of the item-based method is its main advantage.\n",
+        "            - Item-based methods are also more robust to shilling attacksin recommender systems.\n",
+        "        - disadvantages\n",
+        "            - Item-based methods might sometimes recommend obvious items, or items which are **not novel** from previous user experiences.\n",
+        "            - LSA has an overall negative effect on the item-based recommendations.\n",
         "\n",
         "* **다차원 희소 행렬**이라는 특징이 있기 때문에 텍스트 분석에서 사용하는 **코사인 유사도**를 통해 추천 시스템의 유사도를 측정한다.\n",
         "\n",
@@ -166,7 +192,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 414
         },
-        "outputId": "fb7e2a4a-ac31-465e-8d1d-fc1e3c49bde4"
+        "outputId": "a57ce53d-e6f1-470a-8df6-5ab95f42c777"
       },
       "source": [
         "# 레코드 레벨 형태(row-level 형태)의 데이터는 사용자-아이템 평점 행렬로 바꿔줘야함\n",
@@ -186,7 +212,7 @@
         "data = pd.pivot_table(data=data, values='Rating', index='User ID', columns='Item ID')\n",
         "display(data)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -355,7 +381,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "c259fe86-a4a1-485d-9482-47ad0dd9e5ea"
+        "outputId": "35066d37-7ecb-41ec-9777-6c7f8c71970b"
       },
       "source": [
         "# 사용자 기반 최근접 협업 필터링 방식에서 사용하는 데이터 형태\n",
@@ -366,7 +392,7 @@
         "user_based_data = pd.pivot_table(data=data, values='Value', index='User', columns='Movie')\n",
         "user_based_data"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +492,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "4d330c85-da61-473d-8c2c-ae42a15ac017"
+        "outputId": "9af7dbd1-1ec2-4319-f7a9-436078dd13a6"
       },
       "source": [
         "# 아이템 기반 최근접 협업 필터링 방식에서 사용하는 데이터 형태\n",
@@ -477,7 +503,7 @@
         "item_based_data = pd.pivot_table(data=data, values='Value', index='Movie', columns='User')\n",
         "item_based_data"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,10 +600,9 @@
       "metadata": {
         "id": "K_ryBz5jsbiu",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cfe1e83b-917d-4b16-f260-584ecab97464"
+        "outputId": "54a2f42e-8d42-439f-8615-969a0e39a4fc"
       },
       "source": [
         "# 코사인 유사도 계산\n",
@@ -597,7 +622,7 @@
         "print(f'darkknight with starwarz: {cos_similarity(darkknight, starwarz):.4f}')\n",
         "print(f'darkknight with prometheus: {cos_similarity(darkknight, prometheus):.4f}')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +661,14 @@
         "\n",
         "* 잠재 요인 협업 필터링은 숨겨져 있는 *잠재 요인* 을 기반으로 분해된 매트릭스를 이용해 사용자가 아직 평가하지 않은 아이템에 대한 예측 평가를 수행하는 것\n",
         "\n",
-        "* **행렬 분해(Matrix Factorization)**: 다차원의 매트릭스를 저차원의 매트릭스로 분해하는 기법"
+        "* **행렬 분해(Matrix Factorization)**: 다차원의 매트릭스를 저차원의 매트릭스로 분해하는 기법\n",
+        "\n",
+        "---\n",
+        "\n",
+        "* $R(u, i)$ : 사용자(User)의 아이템(Item)에 대한 평점. 사용자-아이템 평점 행렬 R  \n",
+        "($u$: 사용자 아이디, $i$: 아이템 아이디)  \n",
+        "* $P(u, k)$ : 사용자 - 잠재요인 행렬 ($u$: 사용자 아이디, $k$: 장르별 선호도(잠재요인))\n",
+        "* $Q(k, i)$ : 잠재요인 - 아이템 행렬 값 ($k$: 장르별 요소(잠재요인), $i$: 아이템 아이디) \n"
       ]
     },
     {
@@ -647,7 +679,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 723
         },
-        "outputId": "69b9456b-beac-43f0-ad81-4445d22df196"
+        "outputId": "60e8a9b4-7d07-4394-c4d1-deabc780ca1c"
       },
       "source": [
         "# 행렬 분해를 통한 잠재 요인 협업 필터링\n",
@@ -695,7 +727,7 @@
         "print(' 사용자-잠재 요인 행렬(Q)과 잠재 요인-아이템 행렬(Q.T) 내적 곱을 통한 결과 예측')\n",
         "display(predict_matrix)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,7 +1060,19 @@
         "id": "44DpfdiwCQJv"
       },
       "source": [
-        "### 행렬 분해의 이해"
+        "### 행렬 분해의 이해\r\n",
+        "\r\n",
+        "* 다차원의 매트릭스를 저차원 매트릭스로 분해하는 기법.  \r\n",
+        "SVD(Singular Vector Decomposition), NMF(Non-Negative Matrix Factorization) 등이 있음\r\n",
+        "\r\n",
+        "* M개의 사용자 행과 N개의 아이템 열을 가진 평점 행렬 R  \r\n",
+        "행렬 분해를 통해 사용자-K 차원 잠재요인 행렬 P, K차원 잠재요인 - 아이템 행렬 Q.T  \r\n",
+        "$R = P \\cdot Q^T$, R 행렬의 u행 사용자와 i열 아이템 위치에 있는 평점 데이터 $r_{(u, i)} = p_u \\cdot q_i^t$  \r\n",
+        "$R \\cong \\hat{R} = P \\cdot Q^T$, $\\hat{R}$은 행렬 분해를 통해 얻어진 행렬의 내적으로 계산된 값\r\n",
+        "\r\n",
+        "* 행렬 분해 방법\r\n",
+        "    * 주로 SVD (Singular Value Decomposition) 사용. but NaN이 없는 행렬에만 적용 가능\r\n",
+        "    * 따라서 SGD(Stochastic Gradient Descent) 방식 혹은 ALS(Alternating Least Squares) 방식을 이용해서 SVD 수행"
       ]
     },
     {
@@ -1037,33 +1081,64 @@
         "id": "DnttsxQcEA0l"
       },
       "source": [
-        "### 확률적 경사 하강법(SGD, Stochastic Gradient Descent)을 이용한 행렬 분해"
+        "### 확률적 경사 하강법(SGD, Stochastic Gradient Descent)을 이용한 행렬 분해\r\n",
+        "\r\n",
+        "**P와 Q 행렬로 계산된 예측 R 행렬 값이 실제 R 행렬 값과 가장 최소의 오류를 가질 수 있도록 반복적인 비용 함수 최적화를 통해 P와 Q를 유추해내는 것**\r\n",
+        "\r\n",
+        "과정\r\n",
+        "1. P와 Q를 임의의 값을 가진 행렬로 설정\r\n",
+        "2. P와 Q.T를 곱해 예측 R 행렬을 계산하고 예측 R 행렬과 실제 R 행렬에 해당하는 오류 값을 계산\r\n",
+        "3. 이 오류 값을 최소화할 수 있도록 P와 Q 행렬을 적절한 값으로 각각 업데이트\r\n",
+        "4. 만족할 만한 오류 값을 가질 때까지 2,3 작업을 반복하며 P와 Q 값을 업데이트해 근사\r\n",
+        "\r\n",
+        "실제 값과 예측 값의 오류 최소화와 L2 규제(Regularization)를 고려한 비용 함수식 (규제 사용 이유: 학습시 과적합을 피하기 위해)\r\n",
+        "$$ min\\sum{ (r_{(u,i)} - p_u q_i^t)^2 + \\lambda (\\lVert q_i \\rVert ^2 + \\lVert p_u \\rVert ^2) } $$\r\n",
+        "\r\n",
+        "비용 함수 최소화를 위해 새롭게 업데이트 되는 $\\acute{p_u}$, $\\acute{q_u}$  \r\n",
+        "$\\acute{p_u} = p_u + \\eta(e_{(u, i)} * q_i - \\lambda * p_u)$  \r\n",
+        "$\\acute{q_i} = q_i + \\eta(e_{(u, i)} * p_u - \\lambda * q_i)$  \r\n",
+        "$e_{(u, i)} = r_{(u, i)} - \\hat{r_{(u, i)}}$, $\\eta$ : SGD learning rate, $\\lambda$ : L2 규제 계수"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DbNzxlVUH6LN"
+        "id": "DbNzxlVUH6LN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f83d6c64-f495-4006-ce95-385a725590a3"
       },
       "source": [
         "import numpy as np\n",
         "\n",
         "# 원본 행렬 R 생성, 분해 행렬 P와 Q 초기화, 잠재 요인 차원 K는 3으로 설정.\n",
-        "R = np.array([[4, np.NaN, np.NaN, 2, np.NaN],\n",
+        "R = np.array([\n",
+        "              [4, np.NaN, np.NaN, 2, np.NaN],\n",
         "              [np.NaN, 5, np.NaN, 3, 1],\n",
         "              [np.NaN, np.NaN, 3, 4, 4],\n",
-        "              [5, 2, 1, 2, np.NaN]])\n",
+        "              [5, 2, 1, 2, np.NaN]\n",
+        "              ])\n",
         "\n",
         "num_users, num_items = R.shape\n",
-        "K = 3\n",
+        "K = 3 # 잠재요인 차원\n",
+        "print(f'num_users: {num_users}, num_items: {num_items}')\n",
         "\n",
         "# P와 Q 행렬의 크기를 지정하고 정규 분포를 가진 임의의 값으로 입력\n",
         "np.random.seed(1)\n",
         "P = np.random.normal(scale=1./K, size=(num_users, K))\n",
         "Q = np.random.normal(scale=1./K, size=(num_items, K))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "num_users: 4, num_items: 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1088,7 +1163,7 @@
         "\n",
         "    return rmse"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1096,10 +1171,9 @@
       "metadata": {
         "id": "GTugWBkvM_G8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "741a0e6d-b167-4e4a-eadf-32c62052f743"
+        "outputId": "825ea1f7-0bef-4f42-a355-ec13359f426d"
       },
       "source": [
         "# R > 0인 행 위치, 열 위치, 값을 non_zeros 리스트에 저장\n",
@@ -1122,7 +1196,7 @@
         "    if (step % 100) == 0: # 100회 반복시마다 출력\n",
         "        print(f'### iteration step: {step}, rmse: {rmse:.4f}')"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,16 +1221,15 @@
       "metadata": {
         "id": "6GzVLFgyO5vG",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 107
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62a1d2fa-855d-4f1d-dd6b-75463bf12c3b"
+        "outputId": "c3eb9e7c-c75b-4e96-f075-15a91c5e6a3d"
       },
       "source": [
         "pred_matrix = np.dot(P, Q.T)\n",
         "print('예측 행렬:\\n', np.round(pred_matrix, 3))"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,9 +1245,113 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oShFdS_s9xEC"
+      },
+      "source": [
+        "고객(매장 사장님) - X_X - 공급업체 (식자재 공급해주는)\r\n",
+        "\r\n",
+        "\r\n",
+        "신규 고객에 대한 상품 추천 (초개인화)  \r\n",
+        "한식 - 김치찌개, 돌솥밥  : 쌀, 김치, 마늘, \r\n",
+        "\r\n",
+        "* 마늘 - 깐마늘 / 국내산 마늘 / 국내산 깐마늘  ,....\r\n",
+        "* 중량 1kg / 10kg / 100g  \r\n",
+        "* price_per : 단위당 가격\r\n",
+        "* 묶음 \r\n",
+        "\r\n",
+        "\r\n",
+        "협업 필터링 - 사용자 기반 / 아이템 기반\r\n",
+        "\r\n",
+        "사용자 기반 \r\n",
+        "\r\n",
+        "행 : 고객(sid) / 열 : 아이템(pid)\r\n",
+        "value 영화 - 평점  \r\n",
+        "고객이 식자재를 value 어떤 걸로 매기는게 좋을까?  \r\n",
+        "\r\n",
+        "중요) 가격 -> 가격이 낮은 걸 무조건 추천한다.  \r\n",
+        "퀄리티 / 가격  \r\n",
+        "중국산 / 국내산 \r\n",
+        "\r\n",
+        "\r\n",
+        "아이템 기반\r\n",
+        "행: 아이템(pid0 / 열: 고객(sid)\r\n",
+        "\r\n",
+        "\r\n",
+        "데이터가 굉장히 sparse\r\n",
+        "\r\n",
+        "\r\n",
+        "잠재요인-> SVD, 행렬 분해\r\n",
+        "\r\n",
+        "sid - latent / pid - latent\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "고객이 등록을 할때, 메뉴 입력을 받아(삼겹살) -> 업종: 고깃집  \r\n",
+        "고깃집을 가지고 있는 다른 고객(sid) 구매 내역 \r\n",
+        "\r\n",
+        "\r\n",
+        "추천을 해준다고해서  \r\n",
+        "쿠팡 스킨로션 추천을 해주잖아  \r\n",
+        "1순위를 사는게 아니잖아  \r\n",
+        "\r\n",
+        "\r\n",
+        "mAP 추천 n개 해주는데  \r\n",
+        "순위도 평가스코어에 들어가  \r\n",
+        "\r\n",
+        "\r\n",
+        "recommendation system -> personalization\r\n",
+        "* 그룹화\r\n",
+        "* **개인화**\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hs04k5B19xHM"
+      },
+      "source": [
+        "지식 그래프 추천 시스템"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "7-vywS7SQTZC"
+        "id": "J-JCxgkn9xJt"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EolATu2X66Ah"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3juC0ijC66D4"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7Q9yOUU465jH"
       },
       "source": [
         ""
